# admin-portal

./: .aws.config  .aws.credentials.sample  .coveragerc  .dockerignore  .env  .env.ci  .env.devcontainer  .env.docker.sample  .env.gitpod  .env.test  .gitignore  .gitlab-ci.yml  .gitpod.dockerfile  .gitpod.yml  .readthedocs.yaml  .travis.disabled.yml  .travis.yml  Dockerfile  LICENSE  Pipfile  README.md  admin-portal-packaged-application.md  ansible.cfg  compose.yaml  conftest.py  docker-compose.ci.yml  docker-compose.yml  docker-entrypoint.sh  env.sample  gunicorn.conf.py  gunicorn_config.ini  justfile  makefile  manage.py  one_day_to_parquet.py  pyproject.toml  pytest.ini  run-tests.sh  setup-stuff.sh  sublime.sublime-project  (+2 more)
.devcontainer/: codespaces-compose.yaml  devcontainer.json  devpod-compose.yaml  devpod.devcontainer.json  post-create.sh
.github/ISSUE_TEMPLATE/: bug_report.md  discussion.md  feature_request.md
.github/workflows/: ci.yml  deploy.yml  run-cloud-imports.yml  run-cloud-imports.yml.disabled  run-database-snapshot.yml  run-deploy-staging.yml  run-deploy.yml  run-tests-inner.yml  run-tests.yml  test.yml
ansible/: _add_system_dependencies.yml  _assemble_deploy_assets.yml  _create_deployment_directories.yml  _install_deploy_dependencies.yml  _set_up_directories.yml  _set_up_process_mgmt.yml  cloud-ip-range-import.yml  deploy-workers.yml  deploy.yml  domain-dataset-snapshot.yml  dotenv.j2  fetch_snapshot_for_import.yml  migrate.yml  nginx.conf.j2  provision-app.yml  provision_app.yml  run_gunicorn.sh.j2  sample-run.yml  scale_processes.yml  see_command_output.yml  setup_cronjobs.yml  supervisor.gunicorn.conf.j2  supervisor.gunicorn.j2
ansible/inventories/: dev.yml  prod  prod.yml  staging  staging.yml
ansible/templates/: clear_and_import.sql.j2  clear_archived_domains.sh.j2  clear_expired_domains.sh.j2  dotaws.credentials.j2  dotenv.j2  export_green_domains.sh.j2  import_ips_for_large_providers.sh.j2  nginx.conf.j2  run_gunicorn.sh.j2  run_worker.sh.j2  supervisor.gunicorn.conf.j2  supervisor.worker.conf.j2  sweep_carbon_txt_domain_cache.sh.j2  systemd.web-app.service.j2  systemd.worker.service.j2
apps/accounts/: admin.py  admin_site.py  auth.py  factories.py  filters.py  (+11 more)
docs/: conf.py  deployment.md  general.md  how-to.md  how-we-check-for-green.md  importers.md  index.md  installation.md  key-concepts.md  other-greenweb-software.md  recurring-tasks.md  requirements.txt  troubleshooting.md  understanding-the flow-of-a-greencheck.md  users-permissions.md  veirification-request.md  verification-request.md  working-with-docker.md  working-with-greenweb-datasets.md
green_metric_tests/: greencheck_api_loadtest.js  greencheck_test.spec.js  package.json
greenweb/: __init__.py  settings.py  urls.py  wsgi.py
gwp/: __init__.py
requirements/: requirements.dev.generated.txt  requirements.dev.in  requirements.in  requirements.linux.generated.txt
scripts/: build_containers.sh  clone_db.sh  install_package.sh  most-checked-providers.duckdb.sql  test-rabbitmq.connection.py
templates/: base.html  dashboard.html  swagger-ui.html
(+749 files in other folders)
